@@ -15,8 +15,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         emacs_version:
-          - 26.1
-          - 26.2
           - 26.3
           - 27.1
           - 27.2
@@ -62,8 +60,6 @@ jobs:
     strategy:
       matrix:
         emacs-version:
-          - 26.1
-          - 26.2
           - 26.3
           - 27.1
           - 27.2
