@@ -1,4 +1,7 @@
 * Changelog
+** Unreleased
+   - Disable sideline code actions and doc on cursor hover to reduce noise features.
+
 ** 8.0.0
    - lsp-ui version working with lsp-mode v8.0.0
 
